# sonata

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile_playground  LICENSE  README.md  compile-and-run-playground.sh  main.cpp  plot-diagnostic-file.sh  pom.xml
.github/workflows/: check-sanity.yml  health.yml  release.yml
ast/: CMakeLists.txt
ast/src/: ast.h  nclass.cpp  nclass.h  nconstant.cpp  nconstant.h  nfunction_call.cpp  nfunction_call.h  nidentifier.cpp  nidentifier.h  nlet.cpp  nlet.h  nmethod_call.cpp  nmethod_call.h  node.cpp  node.h  nspawn_entity.cpp  nspawn_entity.h  ntype.cpp  ntype.h
ast/src/ir/: nstruct.cpp  nstruct.h
backend-llvm/: CMakeLists.txt
backend-llvm/src/: backend.cpp  backend.h  ir_builder.cpp  ir_builder.h
backend-llvm/src/intrinsics/: internal_std_io.cpp  intrinsics.h
backend-llvm/src/runtime/: runtime.h
common/: CMakeLists.txt
common/src/: metadata.cpp  metadata.h
diagnostic/: CMakeLists.txt
diagnostic/src/: diagnostic.cpp  diagnostic.h
discovery/: CMakeLists.txt
discovery/src/: discovery.cpp  discovery.h
documentation/advanced/memory-model/: 0-memory-layout-isolation.md  1-memory-model.md
documentation/welcome/: 0-hello-world.md
lexer/: CMakeLists.txt
lexer/src/: lexer.cpp  lexer.h  lexer.spec.cpp  lexer.test.cpp  token.h  token_type.cpp  token_type.h
parser/: CMakeLists.txt
parser/src/: parser.cpp  parser.h  parser.spec.cpp  parser_class.test.cpp  parser_function_call.test.cpp  parser_let.test.cpp  parser_method_call.test.cpp  parser_spawn.test.cpp  parser_type.test.cpp
parser/src/test-includes/: includes.hpp
passes/: CMakeLists.txt
passes/src/: pass.h  pass_manager.cpp  pass_manager.h
passes/src/analyzers/: pass_detect_classes.cpp  pass_detect_classes.h  pass_internal_modeler.cpp  pass_internal_modeler.h
passes/src/mutations/: pass_entity_class_ir_transformer.cpp  pass_entity_class_ir_transformer.h  pass_entity_class_method_resolution.cpp  pass_entity_class_method_resolution.h  pass_value_class_ir_transformer.cpp  pass_value_class_ir_transformer.h
runtime/: CMakeLists.txt
runtime/vm/: CMakeLists.txt
runtime/vm/src/: api.cpp  api.h
runtime/vm/src/actor/: actor.cpp  actor.h  actor.test.cpp  actor_system.cpp  actor_system.h  actor_type.cpp  actor_type.h
runtime/vm/src/concurrency/: spin_lock.cpp  spin_lock.h
runtime/vm/src/core/: address.cpp  address.h  address.test.cpp
runtime/vm/src/mailbox/: fiber.cpp  fiber.h  fiber.test.cpp  mailbox.cpp  mailbox.h  mailbox.test.cpp
samples/: playground.sn
samples/bank/: example.js  example.sn
samples/dev/: disemvowel.js  disemvowel.sn
samples/entity-concurrency/: main.js  ping-pong.js  ping-pong.sn
samples/fibonacci/: example.sn  f.sn  fibonacci-with-if.js  fibonacci-with-if.sn  fibonacci.js  fibonacci.sn  output.js
samples/module/: main.js  main.sn
samples/module/lib/: sum.sn
samples/simple/: array-with-tail.js  array-with-tail.sn  array.js  array.sn  map.js  map.sn
samples/streams/: random.js  random.sn
samples/types/: function-overload-by-type.js  function-overload-by-type.sn  sum.sn  value-class-destructuring.js  value-class-destructuring.sn  value-class.js  value-class.sn
sn_examples/: sample.sn
sn_examples/capabilities/: capabilities.sn
sn_examples/playground/: sample.sn
src/main/java/io/sonata/lang/: Bootstrap.java
src/main/java/io/sonata/lang/analyzer/: Analyzer.java  (+3 more)
src/main/resources/lib/std/: io.sn  log.sn  pubsub.sn  range.sn  stream.sn  testing.sn
src/main/resources/lib/std/io/: file.sn
src/main/resources/lib/std/log/: _appender.sn  _format.sn  _logger.sn
src/main/resources/lib/std/pubsub/: _PubSub.sn  inmemory.sn
src/main/resources/lib/std/stream/: _Concat.sn  _Drop.sn  _DropWhile.sn  _Filter.sn  _FlatMap.sn  _Fold.sn  _ForEach.sn  _Map.sn  _Take.sn  _TakeWhile.sn  _WaitForResult.sn  _Zip.sn  _ZipFirst.sn  _ZipLast.sn  _ZipWithIndex.sn
src/main/resources/lib/std/testing/: runner.sn  suite.sn  test.sn
src/main/resources/runtime/js/: directory.js  entity.js  mailbox.js  stacktrace.js  value.js
src/test/resources/e2e/basic/: comments-in-block.sn  comments.sn
src/test/resources/e2e/classes/entities/: entity-class.sn
src/test/resources/e2e/classes/values/: value-class-destructuring.sn  value-class-equality.sn  value-class-method-with-parameters.sn  value-class-price-with-method.sn  value-class-price-with-overloaded-method.sn  value-class-price.sn
src/test/resources/e2e/concurrency/: async-ask.sn  ping-pong-stateful.sn  ping-pong.sn
src/test/resources/e2e/contracts/: contract-factory.sn  contract-implementation.sn  contract.sn
src/test/resources/e2e/lambda/: implicit-lambda-as-reference.sn  implicit-lambda-with-multiple-question-marks.sn  implicit-lambda-with-question-mark.sn  lambda-is-pair.sn  lambda-with-simple-arguments.sn  no-param.sn  with-params.sn
src/test/resources/e2e/let/fn/: composition.sn  function-definition-with-bye-world-parameter.sn  function-definition-with-single-overloaded-parameter.sn  function-definition-without-parameters.sn  function-overload-multiple-types.sn  function-with-block.sn  implicit-lambda-with-question-mark.sn  recursive-function-definition-with-arrays.sn
src/test/resources/e2e/validation/contracts/: must-implement-all-contract-methods.sn  must-implement-all-multiple-contracts.sn  must-not-be-redefined.sn  must-not-contain-let-definitions.sn  must-not-contain-let-variables.sn
src/test/resources/e2e/validation/equality/: compare-unrelated-objects.sn  negated-compare-unrelated-objects.sn
src/test/resources/e2e/validation/immutability/: let-constant.sn  let-function.sn  value-class-external.sn  value-class.sn
src/test/resources/e2e/validation/properties/: entity-to-entity.sn  self.sn  value-to-entity.sn
src/test/resources/lib/std/: stream_test.sn
src/test/resources/lib/std/io/: file_test.sn
type-system/: CMakeLists.txt
type-system/src/: type-system.spec.cpp  type.h  type_registry.cpp  type_registry.h  type_registry.test.cpp
type-system/src/memory/: internal_modeler.cpp  internal_modeler.h  internal_modeler.test.cpp
(+192 files in other folders)
